fix completion spacing problem

--- a/ui/sass/screen.sass
+++ b/ui/sass/screen.sass
@@ -257,6 +257,9 @@ footer[role="contentinfo"]
     margin: 0
     background: $light
     z-index: 2
+    a
+      #{$link}
+        white-space: nowrap
 
   h3, p
     margin-bottom: 0
